relative path for import

--- a/example/index.html
+++ b/example/index.html
@@ -2,8 +2,8 @@
 <head>
 	<script src="prototype.js"></script>
 	<script src="effects.js"></script>
-	<script src="SegmentedSlider.js"></script>
-	<link rel="stylesheet" type="text/css" href="SegmentedSlider.css" />
+	<script src="../SegmentedSlider.js"></script>
+	<link rel="stylesheet" type="text/css" href="../SegmentedSlider.css" />
 	<style>
 body {
 	font-family: lucida grande;
